# octopus-photos

./: .bumpver.toml  .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml  try_app.py
app/api/: __init__.py  app_factory.py  dependencies.py  errors.py  include_routes.py  web_client.py
app/api/routes/: __init__.py  albums_router.py  auth_routes.py  check_routes.py  photos_routes.py  user_routes.py  vault_router.py
app/controllers/: __init__.py  album_controller.py  base_controller.py  photo_controller.py  storage_controller.py  user_controller.py
app/database/: __init__.py  db_config.py  db_session.py
app/database/models/: __init__.py  albums_model.py  associations.py  photos_model.py  storage_model.py  users_model.py
app/enums/: __init__.py  formats_image_enum.py  user_roles_enum.py
app/errors/: __init__.py  base.py  config_errors.py
app/mail/: __init__.py  connection.py  message.py
app/schemas/: __init__.py  album_schemas.py  auth_schemas.py  memory_schemas.py  metadata_schemas.py  photos_schemas.py  storage_schemas.py  user_schemas.py
app/seed/: init_admin.py
app/services/: __init__.py  albums_service.py  mail_service.py  memories_service.py  metadata_service.py  photos_service.py  security_service.py  storage_service.py  users_service.py  vault_service.py
app/settings/: __init__.py  app_settings.py  bootstrap.py  log_settings.py  version.py
app/ui/emails/: recuperar_password.html
app/ui/emails/partials/: _footer.html  _head.html  _header.html
app/ui/static/: .last_build_id  flutter_bootstrap.js  index.html  main.dart.js  main.dart.mjs  main.dart.wasm  manifest.json  version.json
app/ui/static/assets/: NOTICES
app/utils/: __init__.py  dates.py  get_environment_path.py
tests/: conftest.py  test_photo_service.py  test_security_service.py  test_storage_service.py  test_user_service.py
