[project]
name = "octopus-photos"
version = "0.6.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.11.2",
    "bcrypt==3.1.7",
    "cryptography>=46.0.5",
    "email-validator>=2.3.0",
    "exifread>=3.5.1",
    "fastapi>=0.129.0",
    "jinja2>=3.1.6",
    "passlib>=1.7.4",
    "pillow>=12.1.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.22",
    "pytz>=2025.2",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = [
    "bumpver>=2025.1131",
    "pyinstaller>=6.19.0",
    "pystray>=0.19.5",
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
]
